Add dislike support

--- a/bundle/views/options/options.html
+++ b/bundle/views/options/options.html
@@ -26,6 +26,20 @@
             Like <strong>no</strong> videos (disable)
           </label>
         </div>
+        <div class="form-group">
+          <label>
+            <input type="radio" name="dislikeWhat" value="all">
+            Dislike <strong>all</strong> videos
+          </label>
+          <label>
+            <input type="radio" name="dislikeWhat" value="subscribed">
+            Dislike videos from <strong>subscribed channels</strong>
+          </label>
+          <label>
+            <input type="radio" name="dislikeWhat" value="none">
+            Dislike <strong>no</strong> videos (disable)
+          </label>
+        </div>
       </form>
 
       <footer id="links">
