Add report issue in popup
Fix github link to point to the firefox repo
Keep paypal original owner
Increment version for review

--- a/app/styles/options.css
+++ b/app/styles/options.css
@@ -72,6 +72,11 @@ input[type='radio'] {
   text-transform: uppercase;
   letter-spacing: 0.05em;
   font-weight: bold; }
+  
+ #report-link {
+  text-transform: uppercase;
+  letter-spacing: 0.05em;
+  font-weight: bold; }
 
 #github-link svg {
   width: 1.15em;
