Change position links
Change the position to avoid display error with drop down at the bottom

--- a/app/styles/options.css
+++ b/app/styles/options.css
@@ -89,7 +89,7 @@ input[type="radio"].toggle-on-button:checked ~ .toggle-content {
 #links {
 	width: 100%;
 	position: absolute;
-	bottom: 0;
+	top: 0;
 	right: 0.6em;
 	font-size: 12px;
 	text-align: right;
