--- a/app/styles/options.css
+++ b/app/styles/options.css
@@ -26,6 +26,19 @@ svg {
   text-transform: uppercase;
   letter-spacing: 0.1em; }
 
+.form-group {
+  margin-bottom: 1rem; }
+  .form-group.form-group__no-title {
+    margin-top: 1.3rem; }
+
+.form-group-title {
+  margin-bottom: 0.3em;
+  font-size: 1.1em;
+  font-weight: bold;
+  text-transform: uppercase;
+  letter-spacing: 0.02em;
+  opacity: 0.9; }
+
 label {
   display: block;
   margin-bottom: 0.2em;
@@ -33,12 +46,12 @@ label {
   letter-spacing: 0.01em;
   cursor: pointer; }
 
-input[type='radio'] {
+input[type='radio'], input[type='checkbox'] {
   position: relative;
   top: -0.1em;
   cursor: pointer;
   transition: all 0.1s ease-in-out; }
-  input[type='radio'], input[type='radio']:focus, input[type='radio']:hover, input[type='radio']:active {
+  input[type='radio'], input[type='radio']:focus, input[type='radio']:hover, input[type='radio']:active, input[type='checkbox'], input[type='checkbox']:focus, input[type='checkbox']:hover, input[type='checkbox']:active {
     width: 1.2em;
     height: 1.2em;
     margin-right: 1em;
@@ -46,17 +59,23 @@ input[type='radio'] {
     background: #fff !important;
     box-shadow: none !important;
     outline: 0; }
-  input[type='radio']:hover, input[type='radio']:checked {
+  input[type='radio']:hover, input[type='radio']:checked, input[type='checkbox']:hover, input[type='checkbox']:checked {
     transform: scale(1.1); }
-  input[type='radio']:active {
+  input[type='radio']:active, input[type='checkbox']:active {
     transform: scale(1.2); }
-  input[type='radio']:checked::before {
+  input[type='radio']:checked::before, input[type='checkbox']:checked::before {
     display: block;
     background-color: #e62117;
     bottom: 2px;
     left: 2px;
     right: 2px;
     top: 2px; }
+
+input[type='checkbox']:checked::before {
+  position: absolute;
+  width: auto;
+  height: auto;
+  background-image: none; }
 
 #links {
   width: 100%;
