Change donate link to Ko-Fi

--- a/app/pug/options.pug
+++ b/app/pug/options.pug
@@ -36,7 +36,7 @@ html
             | __MSG_optDisable__
             
     #links
-      a#donate-link(href='https://www.paypal.me/austencm/2', title='Donate', target='_blank') __MSG_linkDonate__
+      a#donate-link(href='https://ko-fi.com/austencm', title='Donate', target='_blank') __MSG_linkDonate__
       a#github-link(href='https://github.com/austencm/youtube-auto-like', title='GitHub', target='_blank')
         svg
           use(xlink:href='#icon-git')
