Add bug report link

--- a/app/pug/options.pug
+++ b/app/pug/options.pug
@@ -37,11 +37,12 @@ html
             
     #links
       a#donate-link(href='https://ko-fi.com/austencm', title='Donate', target='_blank') __MSG_linkDonate__
+      a#report-link(href='https://github.com/austencm/youtube-auto-like/issues/new', title='Report a Bug', target='_blank') __MSG_linkReport__
       a#github-link(href='https://github.com/austencm/youtube-auto-like', title='GitHub', target='_blank')
         svg
           use(xlink:href='#icon-git')
-
-    script(src='scripts/modules/i18n.js')
+      
+    script(src='scripts/modules/i18n.js') 
     script(src='scripts/modules/option-manager.js')
     script(src='scripts/options.js')
 
