--- a/app/sass/options.scss
+++ b/app/sass/options.scss
@@ -114,11 +114,11 @@ input[type='checkbox']:checked::before {
   }
 }
 
-#donate-link {
-  text-transform: uppercase;
-  letter-spacing: 0.05em;
-  font-weight: bold;
-}
+// #donate-link {
+//   text-transform: uppercase;
+//   letter-spacing: 0.05em;
+//   font-weight: bold;
+// }
 
 #github-link {
   svg {
