Add option to like video after watching 50%

--- a/app/pug/options.pug
+++ b/app/pug/options.pug
@@ -29,6 +29,9 @@ html
           label(title='Or at the end of the video, if shorter.')
             input(type='radio', name='like_when', value='timed')
             | __MSG_optLikeTimed__
+          label
+            input(type='radio', name='like_when', value='percent')
+            | __MSG_optLikePercent__
         
         .form-group.form-group__no-title
           label
