Add some new links and other fluff

--- a/app/pug/options.pug
+++ b/app/pug/options.pug
@@ -34,13 +34,13 @@ html
             | __MSG_optLikePercent__
         
         .form-group.form-group__no-title
-          label
+          label 
             input(type='checkbox', name='disabled' value='yes')
             | __MSG_optDisable__
             
     #links
-      a#donate-link(href='https://ko-fi.com/austencm', title='Donate', target='_blank') __MSG_linkDonate__
-      a#report-link(href='https://github.com/austencm/youtube-auto-like/issues/new', title='Report a Bug', target='_blank') __MSG_linkReport__
+      a#donate-link(href='https://www.buymeacoffee.com/austen', title='Feed my cats', target='_blank') ☕️
+      a#report-link(href='https://github.com/austencm/youtube-auto-like/issues/new', title='Report a Bug', target='_blank') ⚠️
       a#github-link(href='https://github.com/austencm/youtube-auto-like', title='GitHub', target='_blank')
         svg
           use(xlink:href='#icon-git')
