--- a/app/styles/options.css
+++ b/app/styles/options.css
@@ -7,7 +7,7 @@ body {
 
 a {
   display: inline-block;
-  color: #e62117 !important;
+  color: #333 !important;
   text-decoration: none !important;
   opacity: 0.5;
   transition: all 0.1s ease-in-out; }
@@ -82,7 +82,7 @@ input[type='checkbox']:checked::before {
   position: absolute;
   bottom: 0;
   right: 0.6em;
-  font-size: 12px;
+  font-size: 14px;
   text-align: right; }
   #links a {
     padding: 0.6em 0.4em; }
