Fix webfont not loading

--- a/app/sass/options.scss
+++ b/app/sass/options.scss
@@ -5,8 +5,7 @@ body {
   width: 305px;
   margin: 0;
   padding: $body-padding;
-  font-family: 'Titillium Web';
-  font-weight: 300;
+  font-family: 'Titillium Web', sans-serif;
 }
 
 a {
