--- a/app/pug/options.pug
+++ b/app/pug/options.pug
@@ -3,7 +3,7 @@ html
   head
     meta(charset='utf-8')
 
-    link(href='https://fonts.googleapis.com/css?family=Titillium+Web:300,700')
+    link(href='https://fonts.googleapis.com/css?family=Titillium+Web:400,700', rel='stylesheet')
     link(href='styles/options.css', rel='stylesheet', type='text/css')
 
   body
