Add note about needing to reload to apply options

--- a/src/css/options.css
+++ b/src/css/options.css
@@ -42,6 +42,11 @@ svg {
   opacity: 0.8;
 }
 
+.reload-notice {
+  margin-bottom: 8px;
+  font-style: italic;
+}
+
 .form-group {
   margin-bottom: 1rem;
 }
