--- a/src/css/options.css
+++ b/src/css/options.css
@@ -95,10 +95,46 @@ svg {
   opacity: 0.9;
 }
 
+.option-group {
+  display: flex;
+  min-height: 20px;
+  align-items: center;
+  margin-bottom: 0.5em;
+  font-size: 15px;
+  line-height: 100%;
+}
+
+.option-group input[type='number'] {
+  max-width: 1.5em;
+  height: 1.2em;
+  margin-right: 0.4em;
+  padding: 0;
+  border: 0;
+  line-height: inherit;
+  font-size: inherit;
+  font-family: inherit;
+  border-bottom: 1px dashed currentColor;
+  text-align: center;
+}
+
+.option-group input[type=number]::-webkit-outer-spin-button, 
+.option-group input[type=number]::-webkit-inner-spin-button { 
+  display: none;
+}
+
+.option-group input[type='number']:focus-visible {
+  border-bottom-color: var(--color-brand);
+  outline: 0;
+}
+
+
+fieldset {
+  border: 1px solid rgb(0 0 0 / 25%);
+}
+
 label {
   display: flex;
   align-items: center;
-  margin-bottom: 0.5em;
   font-size: 15px;
   cursor: pointer;
 }
