--- a/src/css/options.css
+++ b/src/css/options.css
@@ -1,13 +1,15 @@
 :root {
   --color-brand: #e62117;
-  --gutter: 30px;
+  --color-gray: #aaa;
+  --gutter: 20px;
+  --card-gutter: 16px;
 }
 
 body {
-  width: 355px;
+  width: 370px;
   margin: 0;
   padding: var(--gutter);
-  font-family: 'Titillium Web', sans-serif;
+  font-family: 'Roboto', 'Arial', sans-serif;
 }
 
 a {
@@ -24,46 +26,56 @@ svg {
 
 .header {
   display: flex;
+  align-items: center;
+  gap: 10px;
+  margin-bottom: 16px;
 }
 
 .title {
   flex-grow: 1;
   font-size: 17px;
   font-weight: 300;
-  margin: 0 0 1em;
+  margin: 0;
   color: var(--color-brand);
   text-transform: uppercase;
   letter-spacing: 0.1em;
 }
 
-.status {
-  text-transform: uppercase;
-  letter-spacing: 0.1em;
-  opacity: 0.8;
+.header svg {
+  width: 30px;
+  height: 30px;
 }
 
 .update-notice {
-  padding: 9px 12px 10px;
-  background: #ffcece;
-  border-radius: 3px;
-  font-size: 14px;
-  line-height: 115%;
-  margin-bottom: 10px;
+  padding: 14px var(--card-gutter);
+  background-color: #f4efef;
+  border-radius: 6px;
+  font-size: 13px;
+  margin-bottom: 16px;
 }
 
 .update-notice p {
-  margin: 0 0 10px;
+  margin: 0 0 12px;
+  line-height: 1.2;
 }
 
 .button {
-  padding: 4px 9px 5px;
-  display: inline-block;
-  font-size: 0.9em;
+  padding: 6px 14px;
+  display: inline-flex;
+  justify-content: center;
+  gap: 6px;
+  font-size: 12px;
   text-decoration: none;
   background: transparent;
-  border: 1px solid #000;
+  border: 1px solid var(--color-gray);
   cursor: pointer;
-  border-radius: 3px;
+  border-radius: 999px;
+  text-align: center;
+}
+
+.button svg {
+  width: 1.2em;
+  height: 1.2em;
 }
 
 .button--primary {
@@ -73,34 +85,29 @@ svg {
   margin-right: 3px;
 }
 
-.reload-notice {
-  margin-bottom: 8px;
+.info {
+  margin-bottom: 20px;
   font-style: italic;
+  opacity: 0.5;
 }
 
 .form-group {
   margin-bottom: 1rem;
-}
-
-.form-group.form-group__no-title {
-  margin-top: 1.3rem;
+  margin-left: 0;
+  padding: 8px var(--card-gutter);
 }
 
 .form-group-title {
-  margin-bottom: 0.3em;
+  margin-bottom: 5px;
   font-size: 1.1em;
-  font-weight: bold;
-  text-transform: uppercase;
-  letter-spacing: 0.02em;
-  opacity: 0.9;
 }
 
 .option-group {
   display: flex;
   min-height: 20px;
   align-items: center;
-  margin-bottom: 0.5em;
-  font-size: 15px;
+  margin-bottom: 0.6em;
+  font-size: 14px;
   line-height: 100%;
 }
 
@@ -128,7 +135,8 @@ svg {
 }
 
 fieldset {
-  border: 1px solid rgb(0 0 0 / 25%);
+  border: 1px solid rgb(0 0 0 / 10%);
+  border-radius: 6px;
 }
 
 label {
@@ -141,12 +149,10 @@ label {
 input[type='radio'],
 input[type='checkbox'] {
   cursor: pointer;
-  transition: all 0.1s ease-in-out;
-  width: 1.2em;
-  height: 1.2em;
-  margin-top: 0.05em;
-  margin-right: 0.7em;
-  border: 2px solid var(--color-brand);
+  width: 1.15em;
+  height: 1.15em;
+  margin: 0.05em 0.6em 0 0.1em;
+  border: 1px solid var(--color-gray);
   appearance: none;
 }
 
@@ -158,50 +164,50 @@ input[type='checkbox'] {
   border-radius: 10%;
 }
 
-input[type='radio']:hover,
-input[type='checkbox']:hover {
-  transform: scale(1.1);
-}
-
-input[type='radio']:focus,
-input[type='checkbox']:focus {
-  transform: scale(1.2);
-  outline: 0;
-}
-
 input[type='radio']:checked,
 input[type='checkbox']:checked {
   background-color: var(--color-brand);
+  border-color: var(--color-brand);
 }
 
 #links {
-  width: 100%;
-  position: absolute;
-  bottom: 0;
-  right: 0.6em;
-  font-size: 14px;
+  display: flex;
+  font-size: 15px;
   text-align: right;
 }
 
 #links a {
-  display: inline-block;
-  padding: 0.6em 0.3em;
-  color: #333 !important;
+  padding: 0.3em;
+  color: var(--color-gray);
   text-decoration: none !important;
-  opacity: 0.5;
   transition: all 0.1s ease-in-out;
-  filter: grayscale(1);
 }
 
 #links a:hover {
   transform: translateY(-0.1em);
-  opacity: 1;
-  filter: grayscale(0);
+  color: #000;
 }
 
-#github-link svg {
-  width: 1.3em;
-  height: 1.3em;
+#links svg {
+  width: 1.4em;
+  height: 1.4em;
   position: relative;
-  top: 0.25em;
+  top: 0.2em;
+}
+
+.donate {
+  display: flex;
+  flex-direction: column;
+  padding: 14px var(--card-gutter);
+  background-color: #f4efef;
+  border-radius: 6px;
+}
+
+.donate .button {
+  margin-top: 10px;
+  margin-right: auto;
+}
+
+.donate p {
+  margin: 0;
 }
